fix bottom gaps

--- a/styles/job.module.scss
+++ b/styles/job.module.scss
@@ -2,8 +2,9 @@
 
 .jobCover {
   display: flex;
-  position: absolute;
+  position: relative;
   bottom: 0;
+margin-top: 100px;
 
   & div {
     display: block !important;
