--- a/styles/services.module.scss
+++ b/styles/services.module.scss
@@ -2,8 +2,10 @@
 
 .servicesCover {
   display: flex;
-  position: absolute;
+  position: relative;
   bottom: 0;
+  margin-bottom: 100px;
+  margin-top: -100px;
 
   & div {
     display: block !important;
